k8s/traefik-ingress/2.helm/example/2.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-http-to-https@kubernetescrd"

spec:
  ingressClassName: traefik
  rules:
    - host: <w.example.com>
      http:
        paths:
          - path: /bar
            pathType: Exact
            backend:
              service:
                name:  whoami
                port:
                  number: 80
          - path: /foo
            pathType: Exact
            backend:
              service:
                name:  whoami
                port:
                  number: 80
  tls:
    - secretName: <example-com-crt-secret>
